[ci skip] Add Poisson and Gamma deviance to the first CV 57a48347bb85b9588f7171efa3b50c288af68587

--- a/_sources/content/notebooks/feature_engineering.ipynb
+++ b/_sources/content/notebooks/feature_engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "004e2fd7",
+   "id": "9ab5c685",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b05af71c",
+   "id": "476b5f71",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6dfcd694",
+   "id": "88434252",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb54224f",
+   "id": "9a1c5e53",
    "metadata": {},
    "source": [
     "## Time range\n",
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "86d17f4b",
+   "id": "56def506",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f242dc8f",
+   "id": "13ea4610",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f5863cf8",
+   "id": "f32cef29",
    "metadata": {},
    "source": [
     "\n",
@@ -154,7 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8e9c4d0e",
+   "id": "f3005aa7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44774a51",
+   "id": "3b91d0c8",
    "metadata": {},
    "source": [
     "\n",
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1502fd8e",
+   "id": "f7ac6b27",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e49fa52b",
+   "id": "9c97f7e6",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -243,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a3ce51b6",
+   "id": "5cdf6a0b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "082e7f22",
+   "id": "f78deeea",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -287,7 +287,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f9836c9b",
+   "id": "0ec80e03",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,7 +331,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c330c9f3",
+   "id": "1de2d732",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,7 +341,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db9f1519",
+   "id": "25256f74",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,7 +355,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "86306f7a",
+   "id": "3b9f18ef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "97c05782",
+   "id": "27c3dea8",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -386,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81b5e861",
+   "id": "1a10ec75",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,7 +418,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1770a4d5",
+   "id": "a7db00d8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "723e8a29",
+   "id": "91669e3e",
    "metadata": {},
    "source": [
     "## Investigating outliers in the lagged features\n",
@@ -453,7 +453,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c53649dc",
+   "id": "bbe201f7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2234d40d",
+   "id": "011d42b0",
    "metadata": {},
    "source": [
     "\n",
@@ -475,7 +475,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90e60328",
+   "id": "fc4afdfb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -486,7 +486,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "55c92527",
+   "id": "5c11d8b6",
    "metadata": {},
    "source": [
     "\n",
@@ -498,7 +498,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75de49a4",
+   "id": "3e340f2e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,7 +522,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5fc9df62",
+   "id": "532b1401",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "90a8e20d",
+   "id": "63d4f37b",
    "metadata": {},
    "source": [
     "\n",
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "613157ff",
+   "id": "72142579",
    "metadata": {},
    "source": [
     "## Final dataset\n",
@@ -579,7 +579,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3fa1c520",
+   "id": "a48c28f4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -608,7 +608,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d8efea14",
+   "id": "2475efe7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -667,7 +667,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67ff9c0b",
+   "id": "1f1cda82",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -693,7 +693,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1b9e26c1",
+   "id": "7976b546",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -705,7 +705,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a8a7d05b",
+   "id": "cc63ad14",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -752,7 +752,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3683124b",
+   "id": "18cc0fd8",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -780,7 +780,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f9253958",
+   "id": "df511a4b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -811,19 +811,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cce7fa54",
+   "id": "857d797f",
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.metrics import make_scorer, mean_absolute_percentage_error, get_scorer\n",
+    "from sklearn.metrics import d2_tweedie_score\n",
     "\n",
     "\n",
     "mape_scorer = make_scorer(mean_absolute_percentage_error)\n",
+    "poisson_scorer = make_scorer(d2_tweedie_score, power=1.0)\n",
+    "gamma_scorer = make_scorer(d2_tweedie_score, power=2.0)\n",
     "\n",
     "cv_results = predictions.skb.cross_validate(\n",
     "    cv=ts_cv_5,\n",
     "    scoring={\n",
     "        \"r2\": get_scorer(\"r2\"),\n",
+    "        \"d2_poisson\": poisson_scorer,\n",
+    "        \"d2_gamma\": gamma_scorer,\n",
     "        \"mape\": mape_scorer,\n",
     "    },\n",
     "    return_train_score=True,\n",
@@ -837,7 +842,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2e5f17f5",
+   "id": "a5b39e1c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -874,7 +879,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dca8f760",
+   "id": "0d650e0e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -887,7 +892,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ebe3146a",
+   "id": "1f428f73",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1025,7 +1030,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ce403b7",
+   "id": "65bbcbe2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1109,7 +1114,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "674a2d21",
+   "id": "436dc3eb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1192,7 +1197,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bce4f949",
+   "id": "09aa32bc",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -1277,7 +1282,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8086a99d",
+   "id": "796da778",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -1287,7 +1292,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ed27d154",
+   "id": "c82a339a",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -1309,7 +1314,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac630fb3",
+   "id": "0b3d5df4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1319,7 +1324,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47aed8bd",
+   "id": "6aa02ab1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1329,7 +1334,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19b067d1",
+   "id": "8c1fe7eb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1350,7 +1355,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff252d8a",
+   "id": "f0c38087",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1366,7 +1371,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "694301b1",
+   "id": "6c74a200",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -1382,7 +1387,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f5f54610",
+   "id": "02dcc5a7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1396,7 +1401,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90a9a3e9",
+   "id": "59ef205c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1408,7 +1413,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24a5e3e3",
+   "id": "2c39f2c4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1424,7 +1429,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3bb8d90e",
+   "id": "5cc68fb4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1492,7 +1497,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "426dc2e7",
+   "id": "b4177bf7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1504,7 +1509,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "98e090c6",
+   "id": "13d3eb41",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1515,7 +1520,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99dd5062",
+   "id": "dfb83c89",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1551,7 +1556,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ecee9bf2",
+   "id": "705b6d75",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1561,7 +1566,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37dc1999",
+   "id": "777bf3b6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1606,7 +1611,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0b9b82e5",
+   "id": "834aceac",
    "metadata": {},
    "outputs": [],
    "source": []
