--- a/jupyterlite/files/notebooks/feature_engineering.ipynb
+++ b/jupyterlite/files/notebooks/feature_engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "890a3606",
+   "id": "06c04adf",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22d57586",
+   "id": "659a1bd8",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23f3d02a",
+   "id": "b639035a",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f91972b",
+   "id": "017dfed7",
    "metadata": {},
    "source": [
     "## Time range\n",
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22ee33d4",
+   "id": "466df113",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3a723da5",
+   "id": "109ce6b9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5fd95d57",
+   "id": "21bb6f9b",
    "metadata": {},
    "source": [
     "\n",
@@ -154,7 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8c4cdedb",
+   "id": "fcaa0e3d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "974f8ae6",
+   "id": "279cd30e",
    "metadata": {},
    "source": [
     "\n",
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0cefcc43",
+   "id": "ff533c80",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f075a20",
+   "id": "310c743d",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -243,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fd7f299f",
+   "id": "0d211fd2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff2238d0",
+   "id": "7bc5363b",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -287,7 +287,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5a3c1ffa",
+   "id": "90a674c0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,7 +331,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a8a0fc3",
+   "id": "44cb6b14",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,7 +341,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf588852",
+   "id": "53be6493",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,7 +355,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7bc5011a",
+   "id": "5a153f11",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21731095",
+   "id": "f7ea03ee",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -386,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c9367c08",
+   "id": "53a5dbde",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,7 +418,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4876268a",
+   "id": "5d1bf28e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b6e42109",
+   "id": "0bd08ff5",
    "metadata": {},
    "source": [
     "## Investigating outliers in the lagged features\n",
@@ -453,7 +453,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4d967421",
+   "id": "29a95cb7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "85b522b4",
+   "id": "361a1be5",
    "metadata": {},
    "source": [
     "\n",
@@ -475,7 +475,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50bb53e5",
+   "id": "990889d6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -486,7 +486,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac8862e6",
+   "id": "804ddd03",
    "metadata": {},
    "source": [
     "\n",
@@ -498,7 +498,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8c046f27",
+   "id": "ffbbcb4c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,7 +522,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "afa32044",
+   "id": "7503024c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "249f075b",
+   "id": "936a9566",
    "metadata": {},
    "source": [
     "\n",
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d0744d59",
+   "id": "c441ef15",
    "metadata": {},
    "source": [
     "## Final dataset\n",
@@ -579,7 +579,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e6ad0cb2",
+   "id": "b4b9f1ca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -608,7 +608,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2ecc3173",
+   "id": "b68de299",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -667,7 +667,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b26d508",
+   "id": "2745da74",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -693,7 +693,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28ff956c",
+   "id": "99a39dc9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -705,7 +705,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e81b51f",
+   "id": "0343bcfb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -752,7 +752,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a162abe2",
+   "id": "223fe458",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -780,7 +780,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a5d15491",
+   "id": "a1e9b417",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -811,19 +811,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e3d46a9",
+   "id": "5206f176",
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.metrics import make_scorer, mean_absolute_percentage_error, get_scorer\n",
+    "from sklearn.metrics import d2_tweedie_score\n",
     "\n",
     "\n",
     "mape_scorer = make_scorer(mean_absolute_percentage_error)\n",
+    "poisson_scorer = make_scorer(d2_tweedie_score, power=1.0)\n",
+    "gamma_scorer = make_scorer(d2_tweedie_score, power=2.0)\n",
     "\n",
     "cv_results = predictions.skb.cross_validate(\n",
     "    cv=ts_cv_5,\n",
     "    scoring={\n",
     "        \"r2\": get_scorer(\"r2\"),\n",
+    "        \"d2_poisson\": poisson_scorer,\n",
+    "        \"d2_gamma\": gamma_scorer,\n",
     "        \"mape\": mape_scorer,\n",
     "    },\n",
     "    return_train_score=True,\n",
@@ -837,7 +842,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b96ae4fa",
+   "id": "1a69325c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -874,7 +879,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fc5b7c21",
+   "id": "6bb8019f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -887,7 +892,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6e3dea57",
+   "id": "4bc12a8d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1025,7 +1030,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "186b7ec0",
+   "id": "8b06c7d7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1109,7 +1114,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24783b43",
+   "id": "7f229eda",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1192,7 +1197,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9d6611d8",
+   "id": "f39d3bd4",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -1277,7 +1282,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0593c0c5",
+   "id": "7d4f4717",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -1287,7 +1292,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5248c665",
+   "id": "f543f113",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -1309,7 +1314,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88313d67",
+   "id": "31af33dc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1319,7 +1324,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15a7ea8f",
+   "id": "10634e84",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1329,7 +1334,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3150289b",
+   "id": "d83af390",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1350,7 +1355,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "662ae580",
+   "id": "43f8c886",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1366,7 +1371,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc81237d",
+   "id": "e99c2c24",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -1382,7 +1387,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ffcd0002",
+   "id": "e3a33941",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1396,7 +1401,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ec05756",
+   "id": "b6b5a53f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1408,7 +1413,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39d84d1e",
+   "id": "5846938e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1424,7 +1429,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ecef75d",
+   "id": "47fad968",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1492,7 +1497,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d358ffb1",
+   "id": "96bff238",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1504,7 +1509,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "157affbd",
+   "id": "f6125432",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1515,7 +1520,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "520087c6",
+   "id": "f9b77186",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1551,7 +1556,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "53362425",
+   "id": "25760083",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1561,7 +1566,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6851bd23",
+   "id": "2e810b89",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1606,7 +1611,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f7d72b79",
+   "id": "07aee980",
    "metadata": {},
    "outputs": [],
    "source": []
